--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -5,3 +5,4 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
 app.showSwaggerUILink=${SHOW_SWAGGER_UI_LINK:${env.SHOW_SWAGGER_UI_LINK:false}}
+app.showH2Console=${H2_CONSOLE_ENABLED:${env.H2_CONSOLE_ENABLED:true}}
