--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -4,8 +4,8 @@ spring.datasource.url=jdbc:h2:file:./target/db-development
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.settings.web-allow-others=true
-spring.h2.console.enabled=true
-# app.showSwaggerUILink=true
+# spring.h2.console.enabled=true
+spring.h2.console.enabled=${SHOW_H2_CONSOLE_ENABLED:${env.SHOW_H2_CONSOLE_ENABLED:true}}
 
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
