--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.1",
+    "recharts": "^2.12.7",
     "web-vitals": "^1.1.1"
   },
   "devDependencies": {
