--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>courses</artifactId>
     <version>1.1.0</version>
     <name>courses</name>
-    <description>Starter for s22 courses search</description>
+    <description>UCSB CMPSC 156 Courses Search App</description>
     <properties>
         <java.version>17</java.version>
         <app.package>edu.ucsb.cs156.courses</app.package>
@@ -234,6 +234,7 @@
                         <param>${app.package}.config.CsrfCookieFilter</param>
                         <param>edu.ucsb.cs156.courses.config.SecurityConfig.MyCsrfRequestMatcher</param>
                         <param>edu.ucsb.cs156.courses.config.SpringFoxConfig</param>
+                        <param>edu.ucsb.cs156.courses.config.MongoConfig</param>
                     </excludedClasses>
                     <excludedTestClasses>
                         <param>edu.ucsb.cs156.example.integration.*</param>
