--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -5,3 +5,4 @@ MONGODB_URI=see-instructions-in-readme
 START_QTR=20221
 END_QTR=20222
 UCSB_API_KEY=see-instructions-in-readme
+COURSE_DATA_STALE_THRESHOLD_MINUTES=1440
