--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,7 @@
                         <exclude>**/edu/ucsb/cs156/courses/controllers/FrontendProxyController.*</exclude>
                         <exclude>**/edu/ucsb/cs156/courses/services/CurrentUserServiceImpl.*</exclude>
                         <exclude>**/edu/ucsb/cs156/courses/CoursesApplication.*</exclude>
+                        <exclude>**/edu/ucsb/cs156/courses/CoursesApplicationRunner.*</exclude>
                     </excludes>
                 </configuration>
 
@@ -229,6 +230,7 @@
                         <param>edu.ucsb.cs156.courses.controllers.FrontendProxyController</param>
                         <param>edu.ucsb.cs156.courses.services.CurrentUserServiceImpl</param>
                         <param>edu.ucsb.cs156.courses.CoursesApplication</param>
+                        <param>edu.ucsb.cs156.courses.CoursesApplicationRunner</param>
                         <param>edu.ucsb.cs156.courses.config.SecurityConfig</param>
                         <param>${app.package}.config.SpaCsrfTokenRequestHandler</param>
                         <param>${app.package}.config.CsrfCookieFilter</param>
