--- a/.github/workflows/02-gh-pages-rebuild-part-1.yml
+++ b/.github/workflows/02-gh-pages-rebuild-part-1.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
     - name: Checkout local code to establish repo
-      uses: actions/checkout@v3.5.2
+      uses: actions/checkout@v4
     - name: Get Pull Requests from Github api
       id: get-prs
       run: |
@@ -31,7 +31,7 @@ jobs:
          echo "pull_requests=${pull_requests}"
          echo "pull_requests=${pull_requests}" >> "$GITHUB_OUTPUT"
     - name: Setup Node.js
-      uses: actions/setup-node@v3.6.0
+      uses: actions/setup-node@v4
       with:
         node-version-file: 'frontend/package.json'
         cache: 'npm'
@@ -45,9 +45,9 @@ jobs:
       destination: target/site/apidocs   
     steps:
     - name: Checkout local code to establish repo
-      uses: actions/checkout@v3.5.2
+      uses: actions/checkout@v4
     - name: Set up Java (version from .java-version file)
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
          distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
          java-version-file: ./.java-version
@@ -56,11 +56,59 @@ jobs:
       run: mvn -DskipTests javadoc:javadoc
 
     - name: Upload to artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
           name: javadoc
           path: ${{ env.destination }}
   
+  build-chromatic-main:
+    name: b - Chromatic (main)
+    runs-on: ubuntu-latest
+    needs: [initialize]
+    env:
+      destination: frontend/chromatic_static   
+
+    steps:
+    - name: Checkout local code to establish repo
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0   # Chromatic needs the full git history
+        token: ${{ github.token }}
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version-file: 'frontend/package.json'
+        cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
+    - name: Install dependencies
+      working-directory: ./frontend
+        # ⚠️ See your package manager's documentation for the correct command to install dependencies in a CI environment.
+      run: npm ci
+    - name: Run Chromatic
+      id: run_chromatic
+      uses: chromaui/action@latest
+      with:
+          # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          workingDir: frontend
+    - name: Echo output
+      run: |
+          echo "Chromatic URL: ${{ steps.run_chromatic.outputs.url }}"
+          echo "Chromatic build ID: ${{ steps.run_chromatic.outputs.storybookUrl }}"
+
+    - name: Build redirect file
+      working-directory: frontend
+      run: | # Create a redirect file to redirect to the storybook online
+          mkdir -p chromatic_static
+          echo "<meta http-equiv=refresh content=0;url=${{steps.run_chromatic.outputs.storybookUrl}}>" > chromatic_static/index.html
+          echo "<meta http-equiv=refresh content=0;url=${{steps.run_chromatic.outputs.url}}>" > chromatic_static/build.html
+
+    - name: Upload to artifacts
+      uses: actions/upload-artifact@v4
+      with:
+          name: chromatic
+          path: ${{ env.destination }}
   
   build-jacoco-main:
     name: c - Jacoco (main)
@@ -71,9 +119,9 @@ jobs:
       destination: target/site/jacoco  
 
     steps:
-    - uses: actions/checkout@v3.5.2
+    - uses: actions/checkout@v4
     - name: Set up Java (version from .java-version file)
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
          distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
          java-version-file: ./.java-version
@@ -82,10 +130,10 @@ jobs:
       continue-on-error: true
       env:
         TEST_PROPERTIES: ${{ secrets.TEST_PROPERTIES }}
-      run: mvn -B -Dgcf.skip test jacoco:report verify
+      run: mvn -B test jacoco:report verify
 
     - name: Upload to artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
           name: jacoco
           path: ${{ env.destination }}
@@ -93,16 +141,16 @@ jobs:
   build-pitest-main:
     name: d - Pitest (main)
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 10
     needs: [initialize]
     env:
       destination: target/pit-reports
       history_destination: target/pit-history
 
     steps:
-    - uses: actions/checkout@v3.5.2
+    - uses: actions/checkout@v4
     - name: Set up Java (version from .java-version file)
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
          distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
          java-version-file: ./.java-version
@@ -139,13 +187,13 @@ jobs:
 
     - name: Upload Pitest History to Artifacts
       if: always() # always upload artifacts, even if tests fail
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
         name: pitest-main-history.bin
         path: ${{ env.history_destination}}/history.bin
 
     - name: Upload to artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
           name: pitest
           path: ${{ env.destination }}
@@ -161,11 +209,11 @@ jobs:
     - uses: szenius/set-timezone@v1.2
       with:
         timezoneLinux: "America/Los_Angeles"
-    - uses: actions/checkout@v3.5.2
+    - uses: actions/checkout@v4
       with: 
         fetch-depth: 2
     - name: Setup Node.js
-      uses: actions/setup-node@v3.6.0
+      uses: actions/setup-node@v4
       with:
         node-version-file: 'frontend/package.json'
         cache: 'npm'
@@ -177,7 +225,7 @@ jobs:
       working-directory: ./frontend
     - name: Upload jest coverage report to Artifacts
       if: always() # always upload artifacts, even if tests fail
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
         name: coverage
         path: ${{ env.destination }}
@@ -185,18 +233,18 @@ jobs:
   build-stryker-main:
     name: f - Stryker (main)
     runs-on: ubuntu-latest
-    timeout-minutes: 120
+    timeout-minutes: 60
     needs: [initialize]
    
     steps:
     - uses: szenius/set-timezone@v1.2
       with:
         timezoneLinux: "America/Los_Angeles"
-    - uses: actions/checkout@v3.5.2
+    - uses: actions/checkout@v4
       with: 
         fetch-depth: 2
     - name: Setup Node.js
-      uses: actions/setup-node@v3.6.0
+      uses: actions/setup-node@v4
       with:
         node-version-file: 'frontend/package.json'
         cache: 'npm'
@@ -227,14 +275,14 @@ jobs:
         npx stryker run --incremental --incrementalFile history/stryker-incremental-main.json
      
     - name: Upload stryker incremental file to Artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
         name: stryker-incremental-main.json
         path: frontend/history
 
     - name: Upload report to Artifacts
       if: always() # always upload artifacts, even if tests fail
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
         name: stryker
         path: frontend/reports/mutation/mutation.html
@@ -254,14 +302,14 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3.5.2
+      uses: actions/checkout@v4
       with:
         ref: ${{ matrix.value.headRefName }}
         fetch-depth: 1
         token: ${{ github.token }}
 
     - name: Set up Java (version from .java-version file)
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
          distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
          java-version-file: ./.java-version
@@ -271,11 +319,76 @@ jobs:
  
     - name: Upload javadoc to Artifacts
       if: always() # always upload artifacts, even if tests fail
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
         name: prs-${{ matrix.value.number }}-javadoc
         path: ${{ env.destination }}
     
+  b-build-chromatic-for-each-pr:
+    name: b - Chromatic (${{ matrix.value.number }}, ${{ matrix.value.headRefName }})
+    runs-on: ubuntu-latest
+    needs: [initialize]
+    if: ${{ needs.initialize.outputs.pull_requests != '[]' && needs.initialize.outputs.pull_requests != '' }}
+
+    strategy:
+      matrix:
+        value: ${{ fromJSON(needs.initialize.outputs.pull_requests)}}
+
+    steps:
+    - name: Debugging Output
+      run: |
+        echo "matrix.value: ${{ matrix.value }}"
+        echo "matrix.value.url: ${{ matrix.value.url }}"
+        echo "matrix.value.author: ${{ matrix.value.author }}"
+        echo "matrix.value.number: ${{ matrix.value.number }}"
+        echo "matrix.value.title:  ${{ matrix.value.title }}"
+        echo "matrix.value.headRefName:  ${{ matrix.value.headRefName }}"
+
+    - name: Checkout repo
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ matrix.value.headRefName }}
+        fetch-depth: 0  # Chromatic needs the full git history
+        token: ${{ github.token }}
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version-file: 'frontend/package.json'
+        cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
+
+    - name: Install dependencies
+      working-directory: ./frontend
+      run: npm ci
+
+    - name: Run Chromatic
+      id: run_chromatic
+      uses: chromaui/action@latest
+      with:
+          # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          workingDir: frontend
+    - name: Echo output
+      run: |
+          echo "Chromatic URL: ${{ steps.run_chromatic.outputs.url }}"
+          echo "Chromatic build ID: ${{ steps.run_chromatic.outputs.storybookUrl }}"
+
+    - name: Build redirect files
+      working-directory: frontend
+      run: | # Create redirect files to redirect to the storybook online
+          mkdir -p chromatic_static
+          echo "<meta http-equiv=refresh content=0;url=${{steps.run_chromatic.outputs.storybookUrl}}>" > chromatic_static_${{ matrix.value.number }}/index.html
+          echo "<meta http-equiv=refresh content=0;url=${{steps.run_chromatic.outputs.url}}>" > chromatic_static_${{ matrix.value.number }}/build.html
+
+    - name: Upload Chromatic to artifacts
+      uses: actions/upload-artifact@v4
+      with:
+          name: prs-${{ matrix.value.number }}-chromatic
+          path: ${{ env.destination }}
+  
+
+
 
   c-build-jacoco-for-each-pr:
     name: c - Jacoco (${{ matrix.value.number }}, ${{ matrix.value.headRefName }})
@@ -290,14 +403,14 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3.5.2
+      uses: actions/checkout@v4
       with:
         ref: ${{ matrix.value.headRefName }}
         fetch-depth: 1
         token: ${{ github.token }}
 
     - name: Set up Java (version from .java-version file)
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
          distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
          java-version-file: ./.java-version
@@ -306,10 +419,10 @@ jobs:
       continue-on-error: true
       env:
         TEST_PROPERTIES: ${{ secrets.TEST_PROPERTIES }}
-      run: mvn -B -Dgcf.skip test jacoco:report verify
+      run: mvn -B test jacoco:report verify
  
     - name: Upload to artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
           name: prs-${{ matrix.value.number }}-jacoco
           path: target/site/jacoco
@@ -331,7 +444,7 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3.5.2
+      uses: actions/checkout@v4
       with:
         ref: ${{ matrix.value.headRefName }}
         fetch-depth: 1
@@ -348,7 +461,7 @@ jobs:
           echo "branch_name=${BRANCH}"
           echo "branch_name=${BRANCH}" >> "$GITHUB_ENV"
     - name: Set up Java (version from .java-version file)
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
          distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
          java-version-file: ./.java-version
@@ -381,13 +494,13 @@ jobs:
 
     - name: Upload Pitest History to Artifacts
       if: always() # always upload artifacts, even if tests fail
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
         name: pitest-${{ matrix.value.number }}-history.bin
         path: ${{ env.history_destination}}/history.bin
 
     - name: Upload to artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
           name: prs-${{ matrix.value.number }}-pitest
           path: ${{ env.destination }}
@@ -408,7 +521,7 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3.5.2
+      uses: actions/checkout@v4
       with:
         ref: ${{ matrix.value.headRefName }}
         fetch-depth: 1
@@ -418,7 +531,7 @@ jobs:
          mkdir -p ${{ env.destination }}
       
     - name: Setup Node.js
-      uses: actions/setup-node@v3.6.0
+      uses: actions/setup-node@v4
       with:
         node-version-file: 'frontend/package.json'
         cache: 'npm'
@@ -432,7 +545,7 @@ jobs:
       working-directory: ./frontend
       
     - name: Upload to artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
         name: prs-${{ matrix.value.number }}-coverage
         path: ${{ env.destination }}
@@ -459,7 +572,7 @@ jobs:
       with:
         timezoneLinux: "America/Los_Angeles"
     - name: Checkout repo
-      uses: actions/checkout@v3.5.2
+      uses: actions/checkout@v4
       with:
         ref: ${{ matrix.value.headRefName }}
         fetch-depth: 2
@@ -469,7 +582,7 @@ jobs:
          mkdir -p ${{ env.destination }}
          mkdir -p ${{ env.history_destination}}
     - name: Setup Node.js
-      uses: actions/setup-node@v3.6.0
+      uses: actions/setup-node@v4
       with:
         node-version-file: 'frontend/package.json'
         cache: 'npm'
@@ -495,12 +608,12 @@ jobs:
       run: |
         npx stryker run --incremental --incrementalFile history/stryker-incremental-${{ matrix.value.number }}.json
     - name: Upload stryker incremental file to Artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
         name: stryker-incremental-${{ matrix.value.number }}.json
         path: ${{ env.history_destination }}
     - name: Upload to artifacts
-      uses: actions/upload-artifact@v3.1.2
+      uses: actions/upload-artifact@v4
       with:
         name: prs-${{ matrix.value.number }}-stryker
         path: ${{ env.destination }}/mutation.html
