--- a/.github/workflows/11-backend-integration.yml
+++ b/.github/workflows/11-backend-integration.yml
@@ -1,25 +1,22 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: "40-check-production-build: Check Production Build (if this fails, deploying to Heroku/Dokku will fail)"
+name: "11-backend-integration: Java Integration tests"
 
 on:
   workflow_dispatch:
+  pull_request:
+    paths: [src/**, pom.xml, lombok.config]
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    paths: [src/**, pom.xml, lombok.config]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     timeout-minutes: 10
-
+    
     steps:
-    - uses: szenius/set-timezone@v1.2
-      with:
-        timezoneLinux: "America/Los_Angeles"
     - uses: actions/checkout@v3.5.2
     - name: Set up Java (version from .java-version file)
       uses: actions/setup-java@v3
@@ -27,9 +24,6 @@ jobs:
          distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
          java-version-file: ./.java-version
   
-    - name: Build with Maven
-      env:
-        PRODUCTION: true
-      run: mvn -DskipTests clean dependency:list install
-
-  
+    - name: Run IT tests with maven
+      run: INTEGRATION=true mvn -B test-compile failsafe:integration-test failsafe:verify
+      
