--- a/.github/workflows/33-frontend-pr-mutation-testing.yml
+++ b/.github/workflows/33-frontend-pr-mutation-testing.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: szenius/set-timezone@v1.2
         with:
           timezoneLinux: "America/Los_Angeles"
-      - uses: actions/checkout@v3.5.2
+      - uses: actions/checkout@v4
         with: 
           fetch-depth: 0
 
@@ -39,11 +39,11 @@ jobs:
           echo "pr_number=${pr_number}" >> "$GITHUB_ENV"
           
       - name: Setup Node.js
-        uses: actions/setup-node@v3.6.0
+        uses: actions/setup-node@v4
         with:
-          node-version-file: 'frontend/package.json'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
+            node-version-file: './frontend/package.json'
+            cache: 'npm'
+            cache-dependency-path: frontend/package-lock.json
 
       - name: Create directory in case it doesn't exist
         run: |
