--- a/.github/workflows/55-chromatic-pr.yml
+++ b/.github/workflows/55-chromatic-pr.yml
@@ -1,14 +1,15 @@
 # Creates/Resets the gh-pages branch to the intended start state
 
-name: "58-javadoc-pr: Update javadoc for a pr to main"
+name: "55-chromatic-pr: Update chromatic for a pr to main"
 on:
   workflow_dispatch:
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
     paths:
-      - 'src/**'
-      - 'pom.xml'    
-      
+      - frontend/**
+      - .github/workflows/55-chromatic-pr.yml
+
 env:
   GH_TOKEN: ${{ github.token }}
 
@@ -26,7 +27,7 @@ jobs:
       branch_name: ${{ steps.get-branch-name.outputs.branch_name }}
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v3.5.2
+      uses: actions/checkout@v4
       with:
         fetch-depth: 1
         token: ${{ github.token }}
@@ -50,11 +51,10 @@ jobs:
           echo "branch_name=${BRANCH}"
           echo "branch_name=${BRANCH}" >> "$GITHUB_OUTPUT"
 
-  build-javadoc-for-this-pr:
-    name: Javadoc (PR ${{ matrix.value.number }}, Branch ${{ matrix.value.headRefName }})
+  build-chromatic-for-this-pr:
+    name: Build Chromatic for PR
     runs-on: ubuntu-latest
     needs: [get-pr-num]        
-
     steps:
     - name: Debugging output
       run: |
@@ -62,28 +62,46 @@ jobs:
         echo "branch_name=${{needs.get-pr-num.outputs.branch_name}}"
 
     - name: Checkout repo
-      uses: actions/checkout@v3.5.2
+      uses: actions/checkout@v4
       with:
         ref: ${{ needs.get-pr-num.outputs.branch_name }}
-        fetch-depth: 1
+        fetch-depth: 0
         token: ${{ github.token }}
 
-    - name: Set up Java (version from .java-version file)
-      uses: actions/setup-java@v3
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
       with:
-         distribution: semeru # See: https://github.com/actions/setup-java#supported-distributions
-         java-version-file: ./.java-version
+          node-version-file: './frontend/package.json'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
   
-    - name: Build javadoc
-      run: mvn -DskipTests javadoc:javadoc
- 
+    - name: Install dependencies
+      working-directory: ./frontend
+      run: npm ci
+    - name: Run Chromatic
+      id: run_chromatic
+      uses: chromaui/action@latest
+      with:
+          # ⚠️ Make sure to configure a `CHROMATIC_PROJECT_TOKEN` repository secret
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          workingDir: frontend
+    - name: Echo output
+      run: |
+          echo "Chromatic URL: ${{ steps.run_chromatic.outputs.url }}"
+          echo "Chromatic build ID: ${{ steps.run_chromatic.outputs.storybookUrl }}"
+    - name: Build redirect file
+      working-directory: frontend
+      run: | # Create a redirect file to redirect to the storybook online
+          mkdir -p chromatic_static_${{ needs.get-pr-num.outputs.pr_number }}
+          echo "<meta http-equiv=refresh content=0;url=${{steps.run_chromatic.outputs.storybookUrl}}>" > chromatic_static_${{ needs.get-pr-num.outputs.pr_number }}/index.html
+          echo "<meta http-equiv=refresh content=0;url=${{steps.run_chromatic.outputs.url}}>" > chromatic_static_${{ needs.get-pr-num.outputs.pr_number }}/build.html
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         branch: gh-pages # The branch the action should deploy to.
-        folder: target/site/apidocs # The folder where mvn javadoc:javadoc outputs the javadoc files
+        folder: frontend/chromatic_static_${{ needs.get-pr-num.outputs.pr_number }} # The folder that the build-chromatic script generates files.
         clean: true # Automatically remove deleted files from the deploy branch
-        target-folder: prs/${{ needs.get-pr-num.outputs.pr_number }}/javadoc # The folder that we serve our javadoc files from 
+        target-folder: prs/${{ needs.get-pr-num.outputs.pr_number }}/chromatic # The folder that we serve our chromatic files from 
   
   
  
