--- a/frontend/package.json
+++ b/frontend/package.json
@@ -77,6 +77,7 @@
     "prettier": "^3.3.3",
     "prop-types": "^15.8.1",
     "storybook": "^8.2.9",
+    "storybook-addon-remix-react-router": "^3.0.0",
     "typescript-eslint": "^8.2.0",
     "webpack": "^5.93.0"
   },
