--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,7 @@
     "@storybook/addon-interactions": "^8.2.9",
     "@storybook/addon-links": "^8.2.9",
     "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/addon-queryparams": "^7.0.1",
     "@storybook/blocks": "^8.2.9",
     "@storybook/preset-create-react-app": "^8.2.9",
     "@storybook/react": "^8.2.9",
