--- a/.env.SAMPLE
+++ b/.env.SAMPLE
@@ -2,9 +2,10 @@ GOOGLE_CLIENT_ID=see-instructions-in-readme
 GOOGLE_CLIENT_SECRET=see-instructions-in-readme
 ADMIN_EMAILS=phtcon@ucsb.edu
 MONGODB_URI=see-instructions-in-readme
-START_QTR=20221
-END_QTR=20222
 UCSB_API_KEY=see-instructions-in-readme
 COURSE_DATA_STALE_THRESHOLD_MINUTES=1440
-
 CHROMATIC_PROJECT_TOKEN=get_value_from_chromatic_dot_com_dashboard
+
+REACT_APP_START_QTR=20221
+REACT_APP_END_QTR=20222
+REACT_APP_SOURCE_REPO=https://github.com/ucsb-cs156/proj-courses
