--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ management.endpoints.web.exposure.include=mappings
 springdoc.swagger-ui.csrf.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 app.admin.emails=${ADMIN_EMAILS:${env.ADMIN_EMAILS:phtcon@ucsb.edu}}
-app.sourceRepo=${SOURCE_REPO:${env.SOURCE_REPO:https://github.com/ucsb-cs156/proj-courses}}
+app.sourceRepo=${REACT_APP_SOURCE_REPO:${env.REACT_APP_SOURCE_REPO:https://github.com/ucsb-cs156/proj-courses}}
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 server.compression.enabled=false
